--- a/website/style.css
+++ b/website/style.css
@@ -220,7 +220,7 @@ nav ul li a:hover {
     .offerings {
         max-width: 100%;
         text-align: left;
-	top: 200px;
+	top: 50vh;
     }
 
     .ele2 video {
